# arisa2

./: Arisa2.cc  Arisa2.h  ArisaCtrl.h  CMakeLists.txt  README.md  Requests.cc  Requests.h  config.json  main.cc  plugin.cc  plugin.h
models/: model.json
src/: ArisaCtrl.cc  ArisaCtrl.h  arisa2.cc  arisa2.h  main.cc  plugin.cc  plugin.h  requests.cc  requests.h  selfdef.cc  selfdef.h
src/plugins/: Covid.cc  DailyWord.cc  Echo.cc  Help.cc  bgmCalendar.cc
